code/codeforanalyzingkcwislacslenses_/ppxf_kinematics_SLACS_lenses/master_script/nohup_archive/.ipynb_checkpoints/nh_master_sys_trial1_022823-checkpoint.txt
  File "slacs_ppxf_systematics_master.py", line 70
    date_of_kin = 
                 ^
SyntaxError: invalid syntax
